examples/errors/runtime_undefined_var_comparison.jc
// ================================================
// ERROR: Undefined Variable in Comparison
// Expected: Runtime Error: Undefined variable 'age'
// ================================================

// Using an undefined variable in a comparison
when (age > 18) {
    say("Adult");
}
